fixed text bleeding on contacts

--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ html {
 
     #contactInfoSection,
     #contactFormSection {
-        width: 100%;
+        width: calc(100% - 2.5rem);
     }
 }
 
